--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js fixture/example.md"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/laco0416/plain-node-cli/issues"
   },
-  "homepage": "https://github.com/laco0416/plain-node-cli#readme"
+  "homepage": "https://github.com/laco0416/plain-node-cli#readme",
+  "dependencies": {
+    "commander": "^2.9.0",
+    "marked": "^0.3.5"
+  }
 }
